03-Project-manifests/argocd-ingress/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-route
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.klaus-devops-journey.com`)
      kind: Rule
      services:
        - name: argocd-server
          namespace: argocd 
          port: 80

  tls:
    secretName: argocd-server-tls
